--- a/pi/html/index.html
+++ b/pi/html/index.html
@@ -7,16 +7,16 @@
 
 <div class="row">
  <div class="column">
- <p><b>Combined Temp Daily Graph.</b></p>
+ <p><b>Combined Daily Graph.</b></p>
  <a href=combine.html>
-   <IMG SRC="dryer_day.png" ALT="Combined Dryer Temperature Daily Graph" style="WIDTH=100%"> </a>
+   <IMG SRC="local_combine_dryer_day.png" ALT="Combined Dryer Daily Graph" style="WIDTH=100%"> </a>
  </div>
- <div class="column">
- <p><b>Combined Dryer Hunidity Daily Graph.</b></p>
- <a href=combine_humid.html>
-   <IMG SRC="combine_humid_day.png" ALT="Combined Humidity Daily Graph" style="WIDTH=100%"> </a>
- </div>
-</div>
+# <div class="column">
+# <p><b>Combined Dryer Hunidity Daily Graph.</b></p>
+# <a href=combine_humid.html>
+#   <IMG SRC="combine_humid_day.png" ALT="Combined Humidity Daily Graph" style="WIDTH=100%"> </a>
+# </div>
+#</div>
 
 <div class="row">
   <div class="column">
