--- a/pi/html/dryer_humid.html
+++ b/pi/html/dryer_humid.html
@@ -4,29 +4,48 @@
 
 <meta http-equiv="refresh" content="300">
 
-<p><b>Dryer Humid Daily Usage Graph.</b></p>
-<IMG SRC="dryer_humid_day.png" ALT="dryer_Temp Daily Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Humidity Daily Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_day.png" ALT="Dryer Inside Humidity Daily Use Graph" WIDTH=600 HEIGH=400>
 </a>
 
-<p><b>Dryer Humid Weekly 
-Usage Graph.</b></p>
-<IMG SRC="dryer_humid_week.png" ALT="dryer_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Humidity Daily Usage Graph.</b></p>
+<IMG SRC="dryer_humid_out_day.png" ALT="Dryer Outside Humidity Daily Use Graph" WIDTH=600 HEIGH=400>
 </a>
 
-<p><b>Dryer Humid Monthly Usage Graph.</b></p>
-<IMG SRC="dryer_humid_month.png" ALT="dryer_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Humidity Weekly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_week.png" ALT="Dryer Inside Humidity Weekly Use Graph" WIDTH=600 HEIGH=400>
+</a>
+
+<p><b>Dryer Outside Humidity Weekly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_out_week.png" ALT="Dryer Outside Humidity Weekly Use Graph" WIDTH=600 HEIGH=400>
+</a>
+
+<p><b>Dryer Inside Humidity Monthly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_month.png" ALT="Dryer Inside Humidity Monthly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer Humid Yearly Graph.</b></p>
-<IMG SRC="dryer_humid_year.png" ALT="dryer_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Humidity Monthly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_out_month.png" ALT="Dryer Outside Humidity Monthly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer Humid 2 Year Graph.</b></p>
-<IMG SRC="dryer_humid_2year.png" ALT="dryer_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Humidity Yearly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_year.png" ALT="Dryer Inside Humidity Yearly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer Humid 5 Year Graph.</b></p>
-<IMG SRC="dryer_humid_5year.png" ALT="dryer_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Humidity Yearly Usage Graph.</b></p>
+<IMG SRC="dryer_humid_out_year.png" ALT="Dryer Outside Humidity Yearly Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Inside Humidity 2 Year Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_2year.png" ALT="Dryer Inside Humidity 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Outside Humidity 2 Year Usage Graph.</b></p>
+<IMG SRC="dryer_humid_out_2year.png" ALT="Dryer Outside Humidity 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Inside Humidity 5 Year Usage Graph.</b></p>
+<IMG SRC="dryer_humid_in_5year.png" ALT="Dryer Inside Humidity 5 Year Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
 <a href=index.html>
