--- a/pi/html/dryer_temp.html
+++ b/pi/html/dryer_temp.html
@@ -4,28 +4,48 @@
 
 <meta http-equiv="refresh" content="300">
 
-<p><b>Dryer Temp Daily Usage Graph.</b></p>
-<IMG SRC="dryer_temp_day.png" ALT="Dryer_Temp Daily Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Temperature Daily Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_day.png" ALT="Dryer Inside Temperature Daily Use Graph" WIDTH=600 HEIGH=400>
 </a>
 
-<p><b>Dryer Temp Weekly Usage Graph.</b></p>
-<IMG SRC="dryer_temp_week.png" ALT="Dryer_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Temperature Daily Usage Graph.</b></p>
+<IMG SRC="dryer_temp_out_day.png" ALT="Dryer Outside Temperature Daily Use Graph" WIDTH=600 HEIGH=400>
 </a>
 
-<p><b>Dryer_Temp Monthly Usage Graph.</b></p>
-<IMG SRC="dryer_temp_month.png" ALT="Dryer_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Temperature Weekly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_week.png" ALT="Dryer Inside Temperature Weekly Use Graph" WIDTH=600 HEIGH=400>
+</a>
+
+<p><b>Dryer Outside Temperature Weekly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_out_week.png" ALT="Dryer Outside Temperature Weekly Use Graph" WIDTH=600 HEIGH=400>
+</a>
+
+<p><b>Dryer Inside Temperature Monthly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_month.png" ALT="Dryer Inside Temperature Monthly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer_Temp Yearly Graph.</b></p>
-<IMG SRC="dryer_temp_year.png" ALT="Dryer_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Temperature Monthly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_out_month.png" ALT="Dryer Outside Temperature Monthly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer Temp 2 Year Graph.</b></p>
-<IMG SRC="dryer_temp_2year.png" ALT="Dryer_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Inside Temperature Yearly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_year.png" ALT="Dryer Inside Temperature Yearly Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
-<p><b>Dryer Temp 5 Year Graph.</b></p>
-<IMG SRC="dryer_temp_5year.png" ALT="Dryer_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
+<p><b>Dryer Outside Temperature Yearly Usage Graph.</b></p>
+<IMG SRC="dryer_temp_out_year.png" ALT="Dryer Outside Temperature Yearly Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Inside Temperature 2 Year Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_2year.png" ALT="Dryer Inside Temperature 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Outside Temperature 2 Year Usage Graph.</b></p>
+<IMG SRC="dryer_temp_out_2year.png" ALT="Dryer Outside Temperature 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<a/>
+
+<p><b>Dryer Inside Temperature 5 Year Usage Graph.</b></p>
+<IMG SRC="dryer_temp_in_5year.png" ALT="Dryer Inside Temperature 5 Year Use Graph" WIDTH=600 HEIGH=400>
 <a/>
 
 <a href=index.html>
