--- a/pi/html/index.html
+++ b/pi/html/index.html
@@ -7,75 +7,45 @@
 <link rel="stylesheet" type="text/css" href="sensors.css">
 <div class="row">
  <div class="column">
- <p><b>Combined Daily Graph.</b></p>
- <a href=combine.html>
-   <IMG SRC="local_combine_dryer_day.png" ALT="Combined Dryer Daily Graph" style="WIDTH=100%"> </a>
- </div>
-# <div class="column">
-# <p><b>Combined Dryer Hunidity Daily Graph.</b></p>
-# <a href=combine_humid.html>
-#   <IMG SRC="combine_humid_day.png" ALT="Combined Humidity Daily Graph" style="WIDTH=100%"> </a>
-# </div>
-#</div>
-
-<div class="row">
-  <div class="column">
-  <p><b>Dryer Temp Daily Graph.</b></p>
-  <a href=attic_temp.html>
-    <IMG SRC="dryer_temp_day.png" ALT="Dryer Temp Daily Graph" style="WIDTH=100%"> </a>
-  <a href=dryer_combined.html>
-  <p><b>Dryer Combined</b></p></a>
-  </div>
-  <div class="column">
-  <p><b>Dryer Humidity Daily Graph.</b></p>
-  <a href=dryer_humid.html>
-    <IMG SRC="dryer_humid_day.png" ALT="Dryer Humidity Daily Graph" style="WIDTH=100%"> </a>
-  </div>
- </div>
-
-<div class="row">
-  <div class="column">
-  <p><b>Dryer Temp Week Graph.</b></p>
-  <a href=dryer_temp.html>
-    <IMG SRC="dryer_temp_week.png" ALT="Dryer Temp Week Graph" style="WIDTH=100%"> </a>
-  <a href=dryer_temp.html>
-  <p><b>New Office Combined</b></p></a>
-  </div>
-  <div class="column">
-  <p><b>Dryer Humidity Week Graph.</b></p>
-  <a href=dryer_humid.html>
-    <IMG SRC="dryer_humid_week.png" ALT="Dryer Humidity Week Graph" style="WIDTH=100%"> </a>
-  </div>
- </div>
-
-<div class="row">
- <div class="column">
- <p><b>Dryer Temp Month Graph.</b></p>
+ <p><b>Combined Daily Temperature Graph.</b></p>
  <a href=dryer_temp.html>
-   <IMG SRC="dryer_temp_month.png" ALT="Dryer Temp Monthly Use Graph" style="WIDTH=100%"> </a>
- <a href=dryer_combined.html> 
- <p><b>Dryer Combined</b></p></a>
+   <IMG SRC="combine_dryer_temp_day.png" ALT="Combined Dryer Daily Temperature Graph" style="WIDTH=100%"> </a>
  </div>
  <div class="column">
- <p><b>Dryer Humidity Monthly Graph</b></p>
+ <p><b>Combined Daily Dryer Humidity Daily Graph.</b></p>
  <a href=dryer_humid.html>
-   <IMG SRC="dryer_humid_month.png" ALT="Dryer Humidity Monthly Use Graph" style="WIDTH=100%"> </a>
+   <IMG SRC="combine_dryer_humid_day.png" ALT="Combined Humidity Daily Graph" style="WIDTH=100%"> </a>
  </div>
 </div>
 
 <div class="row">
   <div class="column">
-  <p><b>Dryer Temp Yearly Graph.</b></p>
+  <p><b>Dryer Inside Temp Daily Graph.</b></p>
   <a href=dryer_temp.html>
-    <IMG SRC="dryer_temp_year.png" ALT="Dryer Temp 1 Year Graph" style="WIDTH=100%"> </a>
-  <a href=dryer_combined.html>
-  <p><b>Dryer Humid Yearly</b></p></a>
+    <IMG SRC="dryer_temp_in_day.png" ALT="Dryer Inside Temp Daily Graph" style="WIDTH=100%"> </a>
+  <a href=dryer_temp.html>
+  <p><b>Dryer Combined</b></p></a>
   </div>
   <div class="column">
-  <p><b>Dryer Humidity Yearly Graph.</b></p>
+  <p><b>Dryer Inside Humidity Daily Graph.</b></p>
   <a href=dryer_humid.html>
-    <IMG SRC="dryer_humid_year.png" ALT="Dryer Humidity Yearly Graph" style="WIDTH=100%"> </a>
+    <IMG SRC="dryer_humid_in_day.png" ALT="Dryer Inside Humidity Daily Graph" style="WIDTH=100%"> </a>
   </div>
- </div> 
+ </div>
+
+<div class="row">
+  <div class="column">
+  <p><b>Dryer Outside Temp Daily Graph.</b></p>
+  <a href=dryer_temp.html>
+    <IMG SRC="dryer_temp_out_day.png" ALT="Dryer Outside Temp Daily Graph" style="WIDTH=100%"> </a>
+  <a href=dryer_temp.html>
+  <p><b>New Office Combined</b></p></a>
+  </div>
+  <div class="column">
+  <p><b>Dryer Outside Humidity Daily Graph.</b></p>
+  <a href=dryer_humid.html>
+    <IMG SRC="dryer_humid_out_day.png" ALT="Dryer Outside Humidity Daily Graph" style="WIDTH=100%"> </a>
+  </div>
+ </div>
 
 </head>
