updates to dryer

--- a/pi/html/index.html
+++ b/pi/html/index.html
@@ -9,12 +9,12 @@
  <div class="column">
  <p><b>Combined Daily Temperature Graph.</b></p>
  <a href=dryer_temp.html>
-   <IMG SRC="combine_dryer_temp_day.png" ALT="Combined Dryer Daily Temperature Graph" style="WIDTH=100%"> </a>
+   <IMG SRC="combine_dryer_temp_day.png" ALT="Combined Dryer Daily Temperature Graph"> </a>
  </div>
  <div class="column">
  <p><b>Combined Daily Dryer Humidity Daily Graph.</b></p>
  <a href=dryer_humid.html>
-   <IMG SRC="combine_dryer_humid_day.png" ALT="Combined Humidity Daily Graph" style="WIDTH=100%"> </a>
+   <IMG SRC="combine_dryer_humid_day.png" ALT="Combined Humidity Daily Graph"> </a>
  </div>
 </div>
 
@@ -22,14 +22,14 @@
   <div class="column">
   <p><b>Dryer Inside Temp Daily Graph.</b></p>
   <a href=dryer_temp.html>
-    <IMG SRC="dryer_temp_in_day.png" ALT="Dryer Inside Temp Daily Graph" style="WIDTH=100%"> </a>
+    <IMG SRC="dryer_temp_in_day.png" ALT="Dryer Inside Temp Daily Graph"> </a>
   <a href=dryer_temp.html>
   <p><b>Dryer Combined</b></p></a>
   </div>
   <div class="column">
   <p><b>Dryer Inside Humidity Daily Graph.</b></p>
   <a href=dryer_humid.html>
-    <IMG SRC="dryer_humid_in_day.png" ALT="Dryer Inside Humidity Daily Graph" style="WIDTH=100%"> </a>
+    <IMG SRC="dryer_humid_in_day.png" ALT="Dryer Inside Humidity Daily Graph"> </a>
   </div>
  </div>
 
@@ -37,14 +37,14 @@
   <div class="column">
   <p><b>Dryer Outside Temp Daily Graph.</b></p>
   <a href=dryer_temp.html>
-    <IMG SRC="dryer_temp_out_day.png" ALT="Dryer Outside Temp Daily Graph" style="WIDTH=100%"> </a>
+    <IMG SRC="dryer_temp_out_day.png" ALT="Dryer Outside Temp Daily Graph"> </a>
   <a href=dryer_temp.html>
   <p><b>New Office Combined</b></p></a>
   </div>
   <div class="column">
   <p><b>Dryer Outside Humidity Daily Graph.</b></p>
   <a href=dryer_humid.html>
-    <IMG SRC="dryer_humid_out_day.png" ALT="Dryer Outside Humidity Daily Graph" style="WIDTH=100%"> </a>
+    <IMG SRC="dryer_humid_out_day.png" ALT="Dryer Outside Humidity Daily Graph"> </a>
   </div>
  </div>
 
