--- a/pi/html/dryer/dryer_humid.html
+++ b/pi/html/dryer/dryer_humid.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-
 <meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Filament Dryer Temperatures</title>
+</head>
 
+<body>
+    
 <p><b>Dryer Inside Humidity Daily Usage Graph.</b></p>
 <IMG SRC="dryer_humid_in_day.png" ALT="Dryer Inside Humidity Daily Use Graph">
 </a>
