--- a/pi/html/dryer/index.html
+++ b/pi/html/dryer/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
+<html>
 <meta http-equiv="refresh" content="300">
 <head>
-<link rel="icon" 
-      type="image/ico" 
-      href="http://web01.hohenfels.mylocal/Logo.png">
-      
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Filament Dryer Temperatures</title>
+</head>
+
+<body>    
 <link rel="stylesheet" type="text/css" href="sensors.css">
 <div class="row">
  <div class="column">
@@ -23,8 +26,6 @@
   <p><b>Dryer Inside Temp Daily Graph.</b></p>
   <a href=dryer_temp.html>
     <IMG SRC="dryer_temp_in_day.png" ALT="Dryer Inside Temp Daily Graph"> </a>
-  <a href=dryer_temp.html>
-  <p><b>Dryer Combined</b></p></a>
   </div>
   <div class="column">
   <p><b>Dryer Inside Humidity Daily Graph.</b></p>
@@ -38,8 +39,6 @@
   <p><b>Dryer Outside Temp Daily Graph.</b></p>
   <a href=dryer_temp.html>
     <IMG SRC="dryer_temp_out_day.png" ALT="Dryer Outside Temp Daily Graph"> </a>
-  <a href=dryer_temp.html>
-  <p><b>New Office Combined</b></p></a>
   </div>
   <div class="column">
   <p><b>Dryer Outside Humidity Daily Graph.</b></p>
@@ -47,5 +46,4 @@
     <IMG SRC="dryer_humid_out_day.png" ALT="Dryer Outside Humidity Daily Graph"> </a>
   </div>
  </div>
-
-</head>
+ </body>
