--- a/pi/html/speedtest/index.html
+++ b/pi/html/speedtest/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-
-<link rel="icon"
-      type="image/ico"
-      href="http://hq37.hohenfels.com/Logo.png">
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Daily Speed Test Graph.</title>
+</head>
 
 <body>
-<meta http-equiv="refresh" content="900">
-
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<p><b>Daily Speed Test Graph.</b></p>
 
 <p><b>Ping Times.</b></p>
 <a href=ping.html>
-<IMG SRC="speedtest_ms_day.png" ALT="Speed Test Ping Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_ms_day.png" ALT="Speed Test Ping Times Graph">
 </a>
 
 <p><b>Download Times.</b></p>
 <a href=download.html>
-<IMG SRC="speedtest_dl_day.png" ALT="Speed Test Download Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_dl_day.png" ALT="Speed Test Download Times Graph">
 </a>
 
 <p><b>Upload Times.</b></p>
 <a href=upload.html>
-<IMG SRC="speedtest_up_day.png" ALT="Speed Test Upload Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_up_day.png" ALT="Speed Test Upload Times Graph">
 </a>
 
 </body>
