--- a/pi/html/speedtest/upload.html
+++ b/pi/html/speedtest/upload.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-
 <html>
-<body>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Upload Times.</title>
+</head>
 
-<p><b>Daily Speed Test Graph.</b></p>
+<body>
 
 <p><b>Upload Times Daily.</b></p>
 
-<IMG SRC="speedtest_up_day.png" ALT="Speed Test Upload Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_up_day.png" ALT="Speed Test Upload Times Graph">
 
 <p><b>Upload Times Weekly.</b></p>
 
-<IMG SRC="speedtest_up_week.png" ALT="Speed Test Weekly Upload Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_up_week.png" ALT="Speed Test Weekly Upload Times Graph">
 
 
 <p><b>Upload Times Monthly.</b></p>
 
-<IMG SRC="speedtest_up_month.png" ALT="Speed Test Monthly Upload Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_up_month.png" ALT="Speed Test Monthly Upload Times Graph">
 
 
 <p><b>Upload Times Yearly.</b></p>
 
-<IMG SRC="speedtest_up_year.png" ALT="Speed Test Yearly Upload Times Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="speedtest_up_year.png" ALT="Speed Test Yearly Upload Times Graph">
+    
+<a href=index.html>
+<p><b>HOME</b></p>
 
 </body>
 </html>
