More More More said the private

--- a/pi/html/temperatures/attic_combined.html
+++ b/pi/html/temperatures/attic_combined.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Attic Combined</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Attic Combined Daily</b></p>
-<IMG SRC="local_combined_attic_day.png" ALT="attic Combined Daily Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_day.png" ALT="attic Combined Daily Use Graph">
 </a>
 
 <p><b>Attic Combined Weekly</b></p>
-<IMG SRC="local_combined_attic_week.png" ALT="attic Combined Weekly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_week.png" ALT="attic Combined Weekly Use Graph">
 </a>
 
 <p><b>Attic Combined Monthly</b></p>
-<IMG SRC="local_combined_attic_month.png" ALT="attic Combined Monthly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_month.png" ALT="attic Combined Monthly Use Graph">
 <a/>
 
 <p><b>attic Combined Yearly</b></p>
-<IMG SRC="local_combined_attic_year.png" ALT="attic Combined Yearly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_year.png" ALT="attic Combined Yearly Use Graph">
 <a/>
 
 <p><b>Attic Combined 2 Year Graph</b></p>
-<IMG SRC="local_combined_attic_2year.png" ALT="attic Combined 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_2year.png" ALT="attic Combined 2 Year Use Graph">
 <a/>
 
 <p><b>Attic Combined 5 Year Graph</b></p>
-<IMG SRC="local_combined_attic_5year.png" ALT="attic Combined 5 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_attic_5year.png" ALT="attic Combined 5 Year Use Graph">
 <a/>
 
 <a href=index.html>
