--- a/pi/html/temperatures/attic_humid.html
+++ b/pi/html/temperatures/attic_humid.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Attic Humidity</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Attic Temp Daily Usage Graph.</b></p>
-<IMG SRC="attic_humid_day.png" ALT="Attic_Temp Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="attic_humid_day.png" ALT="Attic_Temp Daily Use Graph">
 
 <p><b>Attic Temp Weekly 
 Usage Graph.</b></p>
-<IMG SRC="attic_humid_week.png" ALT="Attic_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="attic_humid_week.png" ALT="Attic_Temp Weekly Use Graph">
 
 <p><b>Attic Temp Monthly Usage Graph.</b></p>
-<IMG SRC="attic_humid_month.png" ALT="Attic_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="attic_humid_month.png" ALT="Attic_Temp Monthly Use Graph">
 
 <p><b>Attic Temp Yearly Graph.</b></p>
-<IMG SRC="attic_humid_year.png" ALT="Attic_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="attic_humid_year.png" ALT="Attic_Temp Yearly Use Graph">
 
 <p><b>Attic Temp 2 Year Graph.</b></p>
-<IMG SRC="attic_humid_2year.png" ALT="Attic_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="attic_humid_2year.png" ALT="Attic_Temp 2 Year Use Graph">
 
 <p><b>Attic Temp 5 Year Graph.</b></p>
-<IMG SRC="attic_humid_5year.png" ALT="Attic_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="attic_humid_5year.png" ALT="Attic_Temp 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
