--- a/pi/html/temperatures/barn_humid.html
+++ b/pi/html/temperatures/barn_humid.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Shop Humidity</title>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Barn Humid Daily Usage Graph.</b></p>
-<IMG SRC="barn_humid_day.png" ALT="barn_Temp Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="barn_humid_day.png" ALT="barn_Temp Daily Use Graph">
 
 <p><b>Barn Humid Weekly 
 Usage Graph.</b></p>
-<IMG SRC="barn_humid_week.png" ALT="barn_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="barn_humid_week.png" ALT="barn_Temp Weekly Use Graph">
 
 <p><b>Barn Humid Monthly Usage Graph.</b></p>
-<IMG SRC="barn_humid_month.png" ALT="barn_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="barn_humid_month.png" ALT="barn_Temp Monthly Use Graph">
 
 <p><b>Barn Humid Yearly Graph.</b></p>
-<IMG SRC="barn_humid_year.png" ALT="barn_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="barn_humid_year.png" ALT="barn_Temp Yearly Use Graph">
 
 <p><b>Barn Humid 2 Year Graph.</b></p>
-<IMG SRC="barn_humid_2year.png" ALT="barn_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="barn_humid_2year.png" ALT="barn_Temp 2 Year Use Graph">
 
 <p><b>Barn Humid 5 Year Graph.</b></p>
-<IMG SRC="barn_humid_5year.png" ALT="barn_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="barn_humid_5year.png" ALT="barn_Temp 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
