--- a/pi/html/temperatures/shop_humid.html
+++ b/pi/html/temperatures/shop_humid.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Office Humidity</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Shop Humid Daily Usage Graph.</b></p>
-<IMG SRC="armory_humid_day.png" ALT="armory_Temp Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="armory_humid_day.png" ALT="armory_Temp Daily Use Graph">
 
-<p><b>Shop Humid Weekly 
-Usage Graph.</b></p>
-<IMG SRC="armory_humid_week.png" ALT="armory_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<p><b>Shop Humid Weekly Usage Graph.</b></p>
+<IMG SRC="armory_humid_week.png" ALT="armory_Temp Weekly Use Graph">
 
 <p><b>Shop Humid Monthly Usage Graph.</b></p>
-<IMG SRC="armory_humid_month.png" ALT="armory_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="armory_humid_month.png" ALT="armory_Temp Monthly Use Graph">
 
 <p><b>Shop Humid Yearly Graph.</b></p>
-<IMG SRC="armory_humid_year.png" ALT="armory_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="armory_humid_year.png" ALT="armory_Temp Yearly Use Graph">
 
 <p><b>Shop Humid 2 Year Graph.</b></p>
-<IMG SRC="armory_humid_2year.png" ALT="armory_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="armory_humid_2year.png" ALT="armory_Temp 2 Year Use Graph">
 
 <p><b>Shop Humid 5 Year Graph.</b></p>
-<IMG SRC="armory_humid_5year.png" ALT="armory_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="armory_humid_5year.png" ALT="armory_Temp 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
