--- a/pi/html/temperatures/shop_combined.html
+++ b/pi/html/temperatures/shop_combined.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Shop Combined</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Shop Combined Daily</b></p>
-<IMG SRC="local_combined_shop_day.png" ALT="shop Combined Daily Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_day.png" ALT="shop Combined Daily Use Graph">
 </a>
 
 <p><b>Shop Combined Weekly</b></p>
-<IMG SRC="local_combined_shop_week.png" ALT="shop Combined Weekly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_week.png" ALT="shop Combined Weekly Use Graph">
 </a>
 
 <p><b>Shop Combined Monthly</b></p>
-<IMG SRC="local_combined_shop_month.png" ALT="shop Combined Monthly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_month.png" ALT="shop Combined Monthly Use Graph">
 <a/>
 
 <p><b>Shop Combined Yearly</b></p>
-<IMG SRC="local_combined_shop_1year.png" ALT="shop Combined Yearly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_1year.png" ALT="shop Combined Yearly Use Graph">
 <a/>
 
 <p><b>Shop Combined 2 Year Graph</b></p>
-<IMG SRC="local_combined_shop_2year.png" ALT="shop Combined 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_2year.png" ALT="shop Combined 2 Year Use Graph">
 <a/>
 
 <p><b>Shop Combined 5 Year Graph</b></p>
-<IMG SRC="local_combined_shop_5year.png" ALT="shop Combined 5 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="local_combined_shop_5year.png" ALT="shop Combined 5 Year Use Graph">
 <a/>
 
 <a href=index.html>
