--- a/pi/html/temperatures/ammo_humid.html
+++ b/pi/html/temperatures/ammo_humid.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Ammo Fridge Humidity</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Ammo Humid Daily</b></p>
-<IMG SRC="ammo_humid_day.png" ALT="ammo humid Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="ammo_humid_day.png" ALT="ammo humid Daily Use Graph">
 
 <p><b>Ammo Humid Weekly</b></p>
-<IMG SRC="ammo_humid_week.png" ALT="ammo_humid Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="ammo_humid_week.png" ALT="ammo_humid Weekly Use Graph">
 
 <p><b>Ammo Humid Monthly</b></p>
-<IMG SRC="ammo_humid_month.png" ALT="ammo_humid Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_humid_month.png" ALT="ammo_humid Monthly Use Graph">
 
 <p><b>Ammo Humid Yearly</b></p>
-<IMG SRC="ammo_humid_year.png" ALT="ammo_humid Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_humid_year.png" ALT="ammo_humid Yearly Use Graph">
 
 <p><b>Ammo Humid 2 Year Graph</b></p>
-<IMG SRC="ammo_humid_2year.png" ALT="ammo_humid 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_humid_2year.png" ALT="ammo_humid 2 Year Use Graph">
 
 <p><b>Ammo Humid 5 Year Graph</b></p>
-<IMG SRC="ammo_humid_5year.png" ALT="ammo_humid 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_humid_5year.png" ALT="ammo_humid 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
