--- a/pi/html/temperatures/ammo_temp.html
+++ b/pi/html/temperatures/ammo_temp.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Ammo Fridge Temperature</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Ammo Temp Daily</b></p>
-<IMG SRC="ammo_temp_day.png" ALT="ammo Temp Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="ammo_temp_day.png" ALT="ammo Temp Daily Use Graph">
 
 <p><b>Ammo Temp Weekly</b></p>
-<IMG SRC="ammo_temp_week.png" ALT="ammo_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="ammo_temp_week.png" ALT="ammo_Temp Weekly Use Graph">
 
 <p><b>Ammo Temp Monthly</b></p>
-<IMG SRC="ammo_temp_month.png" ALT="ammo_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_temp_month.png" ALT="ammo_Temp Monthly Use Graph">
 
 <p><b>Ammo Temp Yearly</b></p>
-<IMG SRC="ammo_temp_year.png" ALT="ammo_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_temp_year.png" ALT="ammo_Temp Yearly Use Graph">
 
 <p><b>Ammo Temp 2 Year Graph</b></p>
-<IMG SRC="ammo_temp_2year.png" ALT="ammo_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_temp_2year.png" ALT="ammo_Temp 2 Year Use Graph">
 
 <p><b>Ammo Temp 5 Year Graph</b></p>
-<IMG SRC="ammo_temp_5year.png" ALT="ammo_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="ammo_temp_5year.png" ALT="ammo_Temp 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
