--- a/pi/html/temperatures/armory.html
+++ b/pi/html/temperatures/armory.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Office Armory</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Armory Temp Daily Usage Graph.</b></p>
-<IMG SRC="armory_temp_day.png" ALT="Armory Temp Daily Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_day.png" ALT="Armory Temp Daily Use Graph">
 </a>
 
 <p><b>Armory Temp Weekly 
 Usage Graph.</b></p>
-<IMG SRC="armory_temp_week.png" ALT="Armory_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_week.png" ALT="Armory_Temp Weekly Use Graph">
 </a>
 
 <p><b>Armory Temp Monthly Usage Graph.</b></p>
-<IMG SRC="armory_temp_month.png" ALT="Armory_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_month.png" ALT="Armory_Temp Monthly Use Graph">
 <a/>
 
 <p><b>Armory Temp Yearly Graph.</b></p>
-<IMG SRC="armory_temp_year.png" ALT="Armory_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_year.png" ALT="Armory_Temp Yearly Use Graph">
 <a/>
 
 <p><b>Armory Temp 2 Year Graph.</b></p>
-<IMG SRC="armory_temp_2year.png" ALT="Armory_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_2year.png" ALT="Armory_Temp 2 Year Use Graph">
 <a/>
 
 <p><b>Armory Temp 5 Year Graph.</b></p>
-<IMG SRC="armory_temp_5year.png" ALT="Armory_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
+<IMG SRC="armory_temp_5year.png" ALT="Armory_Temp 5 Year Use Graph">
 <a/>
 
 <a href=index.html>
