--- a/pi/html/temperatures/combine.html
+++ b/pi/html/temperatures/combine.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Combined Temperature</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Combined Temp Daily Usage Graph.</b></p>
-<IMG SRC="combine_day.png" ALT="Armory Temp Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="combine_day.png" ALT="Armory Temp Daily Use Graph">
 
-<p><b>Combine Temp Weekly 
-Usage Graph.</b></p>
-<IMG SRC="combine_week.png" ALT="Attic_Temp Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<p><b>Combine Temp Weekly Usage Graph.</b></p>
+<IMG SRC="combine_week.png" ALT="Attic_Temp Weekly Use Graph">
 
 <p><b>Combine Temp Monthly Usage Graph.</b></p>
-<IMG SRC="combine_month.png" ALT="Attic_Temp Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_month.png" ALT="Attic_Temp Monthly Use Graph">
 
 <p><b>Combine Temp Yearly Graph.</b></p>
-<IMG SRC="combine_year.png" ALT="Attic_Temp Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_year.png" ALT="Attic_Temp Yearly Use Graph">
 
 <p><b>Combine Temp 2 Year Graph.</b></p>
-<IMG SRC="combine_2year.png" ALT="Attic_Temp 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_2year.png" ALT="Attic_Temp 2 Year Use Graph">
 
 <p><b>Combine Temp 5 Year Graph.</b></p>
-<IMG SRC="combine_5year.png" ALT="Attic_Temp 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_5year.png" ALT="Attic_Temp 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
