--- a/pi/html/temperatures/combine_fridge_humid.html
+++ b/pi/html/temperatures/combine_fridge_humid.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="300">
+<head>
+<link rel="icon" type="image/png" href="http://web01.hohenfels.mylocal/Logo.png">
+<title>Combined Humidity</title>
+</head>
+
 <body>
 
-<meta http-equiv="refresh" content="300">
-
 <p><b>Combined Shop and Fridge Daily Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_day.png" ALT="Shop and Fridge Humid Daily Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="combine_ammo_humid_day.png" ALT="Shop and Fridge Humid Daily Use Graph">
 
 <p><b>Combine Shop and Fridge Weekly Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_week.png" ALT="Shop and Fridge Humid Weekly Use Graph" WIDTH=600 HEIGH=400>
-</a>
+<IMG SRC="combine_ammo_humid_week.png" ALT="Shop and Fridge Humid Weekly Use Graph">
 
 <p><b>Combine Shop and Fridge Monthly Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_month.png" ALT="Shop and Fridge Humid Monthly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_ammo_humid_month.png" ALT="Shop and Fridge Humid Monthly Use Graph">
 
 <p><b>Combine Shop and Fridge Yearly Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_year.png" ALT="Shop and Fridge Humid Yearly Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_ammo_humid_year.png" ALT="Shop and Fridge Humid Yearly Use Graph">
 
 <p><b>Combine Shop and Fridge 2 Year Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_2year.png" ALT="Shop and Fridge Humid 2 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_ammo_humid_2year.png" ALT="Shop and Fridge Humid 2 Year Use Graph">
 
 <p><b>Combine Shop and Fridge 5 Year Humid Graph.</b></p>
-<IMG SRC="combine_ammo_humid_5year.png" ALT="Shop and Fridge Humid 5 Year Use Graph" WIDTH=600 HEIGH=400>
-<a/>
+<IMG SRC="combine_ammo_humid_5year.png" ALT="Shop and Fridge Humid 5 Year Use Graph">
 
 <a href=index.html>
 <p><b>HOME</b></p>
